--- a/css/styles.css
+++ b/css/styles.css
@@ -242,6 +242,7 @@ nav {
 nav>div {
     flex: 1 1 50px;
     padding: 2%;
+    border: 1px solid orange;
 }
 
 nav ul {
@@ -268,6 +269,11 @@ nav ul {
 .side-menu {
     justify-content: flex-end;
     gap: 10px;
+    display: none;
+}
+
+.side-menu-small {
+    justify-content: flex-end;
 }
 
 /*I use the same class for all pages even for footer*/
@@ -277,6 +283,16 @@ nav ul {
     background-color: rgb(218, 232, 252);
     border: 1px solid blue;
     color: transparent;
+}
+
+@media only screen and (min-width: 1024px) {
+    .side-menu {
+        display: flex;
+    }
+
+    .side-menu-small {
+        display: none;
+    }
 }
 
 /* ---------------------------------------------------- Style for Footer ---------------*/
